manifests/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: ingress
  name: prometheus-ingress
  namespace: k8-monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.20.118.206.57.nip.io
    http:
      paths:
      - backend:
          service:
            name: kube-prom-stack-kube-prome-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
